-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.1
-
None
-
Linux, amd64
-
b331a74b8fd71ba803e2cf2a9e0c49e1d3538f40
With the recently released mesa-7.8.1 or mesa git master installed, QtOpenGL (current 4.7 branch) does not compile:
In file included from ../../include/QtOpenGL/private/../../../src/opengl/qglpixelbuffer_p.h:65,
from ../../include/QtOpenGL/private/qglpixelbuffer_p.h:2,
from qglpaintdevice.cpp:45:
/usr/include/GL/glx.h:204: error: 'Bool' has not been declared
/usr/include/GL/glx.h:208: error: 'Bool' does not name a type
/usr/include/GL/glx.h:221: error: 'Bool' does not name a type
/usr/include/GL/glx.h:223: error: 'Bool' does not name a type
[...]
It does compile with mesa-7.7, so it must be a missing #include either in current versions of mesa or in Qt itself.