Make QtOpenGL compile with Mesa 7.8.x

In Mesa 7.8.x (probably also the 7.9 branch) GL/glx.h uses Bool and
Status without taking care of defining them. Includes have to be moved
around a bit to accomodate.

GL/glx.h also #includes <X11/Xlib.h>, causing things to go bad if it
is included [indirectly, e.g. by qgl.h] before qt_x11_p.h

Task-number: QTBUG-9691